# ogencl/oas_handlers_gen.go
@@ -1,0 +1,93 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package ogencl
+
+import (
+	"context"
+	"net/http"
+
+	"github.com/go-faster/errors"
+
+	ht "github.com/ogen-go/ogen/http"
+	"github.com/ogen-go/ogen/middleware"
+	"github.com/ogen-go/ogen/ogenerrors"
+)
+
+func recordError(string, error) {}
+
+// handleYookassaHookPostRequest handles POST yookassa_hook operation.
+//
+// A new pet is born, let's come and discover it in Petstore.
+func (s *WebhookServer) handleYookassaHookPostRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var (
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "YookassaHookPost",
+			ID:   "",
+		}
+	)
+	request, close, err := s.decodeYookassaHookPostRequest(r)
+	if err != nil {
+		err = &ogenerrors.DecodeRequestError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		defer recordError("DecodeRequest", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+	defer func() {
+		if err := close(); err != nil {
+			recordError("CloseRequest", err)
+		}
+	}()
+
+	var response *YookassaHookPostOK
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:          ctx,
+			OperationName:    "YookassaHookPost",
+			OperationSummary: "",
+			OperationID:      "",
+			Body:             request,
+			Params:           middleware.Parameters{},
+			Raw:              r,
+		}
+
+		type (
+			Request  = *YookassaHookPostReq
+			Params   = struct{}
+			Response = *YookassaHookPostOK
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			nil,
+			func(ctx context.Context, request Request, params Params) (response Response, err error) {
+				err = s.h.YookassaHookPost(ctx, request)
+				return response, err
+			},
+		)
+	} else {
+		err = s.h.YookassaHookPost(ctx, request)
+	}
+	if err != nil {
+		defer recordError("Internal", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	if err := encodeYookassaHookPostResponse(response, w); err != nil {
+		defer recordError("EncodeResponse", err)
+		if !errors.Is(err, ht.ErrInternalServerErrorResponse) {
+			s.cfg.ErrorHandler(ctx, w, r, err)
+		}
+		return
+	}
+}
