# ogencl/oas_server_gen.go
@@ -1,0 +1,35 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package ogencl
+
+import (
+	"context"
+)
+
+// WebhookHandler handles webhooks described by OpenAPI v3 specification.
+type WebhookHandler interface {
+	// YookassaHookPost implements POST yookassa_hook operation.
+	//
+	// A new pet is born, let's come and discover it in Petstore.
+	//
+	YookassaHookPost(ctx context.Context, req *YookassaHookPostReq) error
+}
+
+// WebhookServer implements http server based on OpenAPI v3 specification and
+// calls WebhookHandler to handle requests.
+type WebhookServer struct {
+	h WebhookHandler
+	baseServer
+}
+
+// NewWebhookServer creates new WebhookServer.
+func NewWebhookServer(h WebhookHandler, opts ...ServerOption) (*WebhookServer, error) {
+	s, err := newServerConfig(opts...).baseServer()
+	if err != nil {
+		return nil, err
+	}
+	return &WebhookServer{
+		h:          h,
+		baseServer: s,
+	}, nil
+}
